--- a/studies.html
+++ b/studies.html
@@ -91,7 +91,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
 
     
 
@@ -148,7 +148,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a></div>
-                        <img src="assets/images/background136.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background156.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -165,7 +165,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background237.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background257.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -183,7 +183,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background338.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background358.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><a href="assets/files/201809SOCLMAR.pdf" target="_blank">Sadat Industrial City 2018</a></h4>
@@ -331,7 +331,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background135.jpg" alt="Mobirise">
+                        <img src="assets/images/background155.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market and HR</strong></h4>
@@ -347,7 +347,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background230.jpg" alt="Mobirise">
+                        <img src="assets/images/background250.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market Studies by sector</strong></h4>
@@ -363,7 +363,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background331.jpg" alt="Mobirise">
+                        <img src="assets/images/background351.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market Studies</strong></h4>
