--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -95,7 +95,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -119,7 +119,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="HyyWqmkRhaReBjPTP+LGVqQZJ+PVBM71PTUnULtGY8u4r7w8VpPJ7wOViHm+TOj2233QBmVQYRkVYczneVqsnGtoZEez1SGL2tY+4zjOxiJxeDS2yNwUwSGiGW6DvXRa.d3Pl7SP3jgat3wmmY86iiTlVNKZjP0qPPgN9+ePApc1fscHGFdmmGfZllxc6ODssG4lYTiyZ9qNMXksnq61DR8T6tF+imZSJOKfLD6F04ggrMzreUsE/lyjuziwar5GQ">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Z3uWm4RnXajpQ2as+4pxbBNOmMZZfWsfWo+8q4+nbG+f2QvH5RZrYNkpQvW1GjC761P1mdrfev2tW9P8XHvIT6wOPNVV7OCDRTanLXLQxdj3wzunUpfwlFaL4IJOd2sQ.SpLRAXywu/ZUn2Iwe2yp29XR13Fw128gcCvVPayOLy4BQqGvtSNLeVDPOxLtcX/cgn/U45xu4cPDpTFbEArljHnvYQnx7hImZSto8qKtWfSMq70R3O/KfjvLRikXQdJI">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
