--- a/tools.html
+++ b/tools.html
@@ -91,7 +91,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
+<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
 
     
 
@@ -120,9 +120,9 @@
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
                     Labour Market Information System</h1>
-                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2"><strong>LMIS Tools</strong></h3>
+                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-1"><strong>LMIS Tools</strong></h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>a set of helping tools for searchers and researchers in the Labour Market including survey building and information mapping</strong></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="tools.html#features3-1j">More</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="tools.html#features1-1m"><span class="mbri-help mbr-iconfont mbr-iconfont-btn"></span>Charts<br></a> <a class="btn btn-md btn-white display-4" href="tools.html#features3-6l"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>Studies</a>  <a class="btn btn-md btn-secondary display-4" href="tools.html#map1-95"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span>Maps</a></div>
             </div>
         </div>
     </div>
@@ -139,7 +139,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background156.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background166.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>LMIS Map</strong></h4>
@@ -154,7 +154,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background257.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background267.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
@@ -169,7 +169,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background358.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background368.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Surveies</strong></h4>
@@ -184,7 +184,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background459.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background469.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
